fp - homework part

--- a/fp/index.html
+++ b/fp/index.html
@@ -556,6 +556,13 @@ const zero: F&lt;undefined> = ...</code></pre>
 
 		<section>
 			<h3>Homework</h3>
+			<section>
+				<p>browse through a functional <a href="https://github.com/gcanti/fp-ts/blob/master/examples/fp-ts-to-the-max-I.ts">repo</a> and get a taste of FP</p>
+			</section>
+			<section>
+				<s><p>browse a functional <a>repo</a> and get a taste of FP</p></s>
+				<p>look for a functional repo and get a taste of FP</p>
+			</section>
 		</section>
 
 	</div>
